Added new feature for loading MakerHook(s) from within jar files